--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <script src="hash-grid.js"></script>
     <script src="mySketch.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="dhd-display-favicon-32x32.png"
+      type="image/x-icon"
+    />
   </head>
 
   <body></body>
